# openapi3.yaml
@@ -154,6 +154,98 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '500':
           $ref: '#/components/responses/InternalError'
+  /search/location/coordinates:
+    get:
+      operationId: locationGetCoordinates
+      summary: Reverse search a location by WGS84 coordinates
+      description: >-
+        Reverse-search for geo-data. Send WGS84 coordinates and get what's there. It serves data from multiple diverse mapcolonies                                                                                     
+        vector sources and partners.
+      tags:
+        - Location Name Based Search
+      parameters:
+        - $ref: '#/components/parameters/token'
+        - $ref: '#/components/parameters/xApiKey'
+        - name: lat
+          in: query
+          description: Latitude of the coordinate
+          schema:
+            type: number
+            minimum: -90
+            maximum: 90
+          required: true
+        - name: lon
+          in: query
+          description: Longitude of the coordinate
+          schema:
+            type: number
+            minimum: -180
+            maximum: 180
+          required: true
+        - name: source
+          in: query
+          required: false
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Source'
+            title: Source
+          description: |
+            Sources to include (if not specified, all sources will be queried)
+        - name: relation
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: [intersects, disjoint, contains]
+            default: intersects
+          description: |
+            The spatial relationship between the query point and the indexed shapes
+        - $ref: '#/components/parameters/limit'
+      responses:
+        '200':
+          description: OK
+          x-request-id:
+            schema:
+              type: string
+              minLength: 1
+              maxLength: 36
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/genericGeocodingResponse'
+                  - type: object
+                    required:
+                      - type
+                      - features
+                    properties:
+                      type:
+                        type: string
+                        enum:
+                          - FeatureCollection
+                      features:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            geometry:
+                              $ref: '#/components/schemas/GeometryObjectSchema'
+                            properties:
+                              type: object
+                              properties:
+                                placetype:
+                                  type: string
+                                sub_placetype:
+                                  type: string
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '500':
+          $ref: '#/components/responses/InternalError'
   /search/location/regions:
     get:
       operationId: locationGetRegions
@@ -1041,6 +1133,14 @@ components:
                   type: array
                   items:
                     $ref: '#/components/schemas/Point3D'
+    GeometryObjectSchema:
+      oneOf:
+        - $ref: '#/components/schemas/Point'
+        - $ref: '#/components/schemas/LineString'
+        - $ref: '#/components/schemas/Polygon'
+        - $ref: '#/components/schemas/MultiPoint'
+        - $ref: '#/components/schemas/MultiLineString'
+        - $ref: '#/components/schemas/MultiPolygon'
     Source:
       type: string
       title: Source
